add generate 10 random emails and print on page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container py-5">
         <h1 class="my-5">Email List</h1>
         <ul class="email_list">
+            <!-- <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
@@ -23,8 +24,7 @@
             <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
-            <li>email@placeholder.com</li>
-            <li>email@placeholder.com</li>
+            <li>email@placeholder.com</li> -->
         </ul>
 
         <div class="container text-center mt-5">
