fix function doc and minor layout fixes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 <body>
 
     <div class="container py-5">
-        <h1 class="my-5">Email List</h1>
-        <ul class="email_list">
+        <div class="container text-center mt-5 d-flex gap-3 align-items-center">
+            <h1 class="my-5">Email List</h1>
+            <button class="btn btn-primary">New fetch</button>
+        </div>
+
+        <ul class="email_list bg-dark-subtle p-4">
             <!-- <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
             <li>email@placeholder.com</li>
@@ -27,10 +31,8 @@
             <li>email@placeholder.com</li> -->
         </ul>
 
-        <div class="container text-center mt-5">
-            <button class="btn btn-primary">New fetch</button>
-        </div>
-        
+
+
     </div>
 
 
