--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-dark">
 
     <div class="container py-5">
         <div class="container text-center mt-5 d-flex gap-3 align-items-center">
-            <h1 class="my-5">Email List</h1>
+            <h1 class="my-5 text-light">Email List</h1>
             <button class="btn btn-primary">New fetch</button>
         </div>
 
